# hakopita_fast_api

./: .env.template  .gitignore  LICENSE  Makefile  README.md  lambda_handler.py  package-lock.json  pyproject.toml  requirements.txt.bak  serverless.yml  serverless.yml.example  set_ssm_from_env.sh
.github/workflows/: deploy-dev.yml  deploy-prod.yml  test.yml
app/: __init__.py  main.py
app/core/: logging.py
app/crud/: storage_crud.py
app/db/: session.py
app/models/: storage_model.py
app/routers/: storage_router.py
app/schemas/: storage_schemas.py
docs/: inverted_search_test_cases.md
scripts/: get_version.sh
tests/: conftest.py  test_fetch_storage.py  test_search_storage.py
